--- a/src/output.css
+++ b/src/output.css
@@ -2267,6 +2267,11 @@
       max-width: 90%;
     }
   }
+  .md\:justify-center {
+    @media (width >= 48rem) {
+      justify-content: center;
+    }
+  }
   .md\:gap-5 {
     @media (width >= 48rem) {
       gap: calc(var(--spacing) * 5);
