--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -184,6 +184,85 @@ body {
     }
 }
 
+/* MODAL CARRINHO */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .modal-carrinho {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+}
+
+.modal-content-carrinho {
+    background-color: white;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 400px;
+    text-align: center;
+}
+
+.close {
+    color: red;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.modal-carrinho input, select {
+    width: 100%;
+    margin: 8px 0;
+    padding: 10px;
+}
+
+.modal-carrinho .btn {
+    background-color: red;
+    color: white;
+    padding: 10px;
+    width: 100%;
+    border: none;
+    cursor: pointer;
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* MENU CONTAINER */
 
 .pratos-container {
@@ -269,6 +348,17 @@ body {
     background: rgba(0, 0, 0, 0.8);
     z-index: 1000;
     overflow-y: auto;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 1000;
 }
 
 .modal-conteudo {
