--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -402,7 +402,7 @@ body {
 }
 
 .saiba-mais {
-    color: #ff000093;
+    color: #838383;
     cursor: pointer;
     font-size: 1rem;
     font-style: italic;
