--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -198,22 +198,73 @@ body {
 
 
 
+.modal-carrinho {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 9999; /* Valor alto para sobrepor tudo */
+    display: none;
+    overflow-y: auto;
+}
+
+.modal-conteudo-finalizar {
+    position: relative;
+    background: white;
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+}
 
 
-
-/* Estilos do modal de finalização
-#modal-finalizar .modal-conteudo {
+Estilos do modal de finalização
+#modal-finalizar .modal-conteudo-finalizar {
     max-width: 500px;
+}
+
+.fechar-modal-carrinho {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 2rem;
+    font-weight: bold;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background: red;
+    color: white;
 }
 
 .form-group {
     margin-bottom: 1rem;
 }
 
+.form-group input {
+    border-radius: calc(infinity * 1px);
+}
+
 .form-group label {
     display: block;
     margin-bottom: 0.5rem;
+    font-size: 1.1rem;
     font-weight: 500;
+}
+
+.form-group select {
+    border-radius: calc(infinity * 1px);
+}
+
+.form-group textarea {
+    border-radius: 5px;
 }
 
 .form-group input,
@@ -221,21 +272,33 @@ body {
 .form-group textarea {
     width: 100%;
     padding: 0.5rem;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+    border: 1px solid #dbdbdb;
     font-size: 1rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.form-group input:focus,
+.form-group select:focus,
+.form-group textarea:focus {
+    outline: none;
+    border-color: red;
+} 
+
+.total-finalizar  {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-top: 20px;
 }
 
 .btn-confirmar {
-    background: #27ae60;
+    background: red;
     color: white;
     border: none;
-    padding: 12px 24px;
-    border-radius: 5px;
-    cursor: pointer;
+    padding: 15px 30px;
     width: 100%;
-    font-size: 1.1rem;
-    margin-top: 1rem;
+    margin-top: 20px;
+    cursor: pointer;
+    border-radius: calc(infinity * 1px);
 }
 
 .btn-confirmar:hover {
@@ -244,66 +307,22 @@ body {
 
 #troco-container {
     transition: all 0.3s ease;
-} */
-
-
-
-
-
-
-
-
-/* .modal-carrinho {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.5);
 }
 
-.modal-content-carrinho {
-    background-color: white;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 400px;
-    text-align: center;
+@media (max-width: 769px) {
+    #modal-finalizar .modal-conteudo-finalizar {
+        max-width: 100%;
+        margin: 5% 2%;
+    }
+
+    .fechar-modal-carrinho {
+        width: 25px;
+        height: 25px;
+        font-size: 1.5rem;
+        top: 5px;
+        right: 5px;
+    }
 }
-
-.close {
-    color: red;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.modal-carrinho input, select {
-    width: 100%;
-    margin: 8px 0;
-    padding: 10px;
-}
-
-.modal-carrinho .btn {
-    background-color: red;
-    color: white;
-    padding: 10px;
-    width: 100%;
-    border: none;
-    cursor: pointer;
-} */
-
-
-
-
-
-
-
-
 
 
 
